# mcp

./: README.md  pyproject.toml
examples/: demo_app.py
tensorus_mcp/: __init__.py  config.py  server.py
tests/: test_mcp_client.py  test_mcp_integration.py  test_mcp_server.py
